checker/tests/parsing/errors/field_ref_with_struct.mft
type T {
  value: V;
  impl Tr { m: .value {} };
}
=== error ===
Unrecognized token `{` found at 43:44
Expected one of ",", "|" or "}"